style/index.css
.home #canvas {
    position: relative;
    width: 100vw;
    height: 50vh;
}

.home #overlay {
    position: absolute;
    margin-top: 30vh;
    margin-left: 50px;
    width: 30vw; 
    height: 100%;
    top: 0; 
    z-index: 2;
}

.home .heroDL:hover{
    color: rgb(39, 39, 39);
}

.home #heroPusher{
    margin-bottom: 180px;
}

.home .whatIsExokit{
    z-index: -4;
    position: relative;
    margin-top: -80px;
    min-height: 350vh;
}

.home .whatIsExokitPusher{
    margin-top: 500px;
}

.home .whatIsExokitImg{
    height: auto;
    width: 50%;
    position: absolute;
    bottom: -20;
    left: 0;
    color: black;

}

.home .mlImg, .home .oculusImg, .home .viveImg{
    height: 100px;
    margin-bottom: 100px;
    width: auto;
}

.home .exokitImg{
    height: 60px;
    width: auto;
}
.home .exokitName{
    font-family: Bison;
    font-size: 60px;
}

.home .featureArrow {
    border-right: thin solid black;
    height: 80px;
    width: 50%;
    margin-top: 70px;
    margin-bottom: 70px;
}

.home .featurePusher{
    padding-top: 35px;
}
.home .featureText{
    width: 75%;
    margin-left: 10vw;
    line-height: 1.5;
}
.home .featureTextPusher{
    height: 60vh;
}

.home .slideTextLeft{
    animation: moveLeft 1s ease-in;
}
.home .slideTextRight{
    animation: moveRight 1s ease-in;
}

@keyframes moveLeft {
    from { margin-left: 1000px; }
    to { margin-left: 0px; }
}

@keyframes moveRight {
    from { margin-left: 0px; }
    to { margin-left: 1000px; }
}

.home .exokitFeatures{
    position: relative;
    min-height: 1100vh;
    color: white;
    background: #2E84DC;  /* fallback for old browsers */
    /* -webkit-clip-path: polygon(0 0, 100% 10%, 100% 100%, 0 100%);
    clip-path: polygon(0 0, 100% 10%, 100% 100%, 0 100%); */
    margin-top: -15vh;
}

.home .exokitFeatures ::-webkit-scrollbar{
    width: 0px;
    background: transparent;  
}

.home .vLine{
    border-left: 3px solid white;
    float: left;
}
.home .featureArrows{
    padding-top: 160px;
}

.home .exokitFeatures .row{
    width: 100%;
}

.home .exokitFeature{
    border-radius: 25px;
    text-align: center;
    height: auto;
    min-height: 400px;
    background: rgba(238, 238, 238, 0);  /* fallback for old browsers */
    background: -webkit-linear-gradient(120deg, #EEEEEE, #EEEEEE);  /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(120deg, rgba(238, 238, 238, 0.70), rgba(238, 238, 238, 0)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}

.home .madeWithExokit{
    position: relative;
    color: black;
    min-height: 70vh
}

.home .madeWithExokitPusher{
    margin-top: 50px;
}

.home #madeWithExokitMainImg{
    max-height: 60vh;
    width: auto;
    border-radius: 30px;
}

.home .madeWithExokitSubImg{
    max-height: 20vh;
    width: auto;
    cursor: pointer;
}

.home .quotes{
    color: white;
    position: relative;
    min-height: 90vh;
    background: #FF416C;  /* fallback for old browsers */
    background: -webkit-linear-gradient(to left, #FF4B2B, #FF416C);  /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to left, #FF4B2B, #FF416C); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    -webkit-clip-path: polygon(0 0, 100% 10%, 100% 100%, 0 100%);
    clip-path: polygon(0 0, 100% 10%, 100% 100%, 0 100%);
}

.home .quotesPusher{
    margin-top: 200px;
}

.home .quotesPic{
    height: 80px;
    width: auto;
    border-radius: 100px;
}
.home .quoteArrow{
    cursor: pointer;
}
.home .quoteArrow:hover{
    color: rgb(207, 207, 207);
}
.home .card-body{
    color: black;
}

.home .slideCardsLeft{
    animation: slideCardsLeft 0.5s ease-in;
}

@keyframes slideCardsLeft {
    from { margin-left: 0px; }
    to { margin-left: 1000px; }
}

.home .shadow {
    -moz-box-shadow:    100px 100px 100px 100px #ccc;
    -webkit-box-shadow: 100px 100px 100px 100px #ccc;
    box-shadow:         100px 100px 100px 100px #ccc;
  }

.home .getStarted{
    position: relative;
    height: 60vh;
    min-height: 600px;
    background-image: url('../media/getStarted.png');
    background-size: contain;
}

.home .verticalLine {
    border-left: thin solid rgba(0, 0, 0, 0.685);
    height: 80px;
}

@media only screen and (max-width: 800px) {
    .home #overlay {
        width: 80vw;
        margin-top: 15vh;
    }
    .home #heroPusher{
        margin-bottom: 40px;
    }
    .home #canvas{
        margin-top: 18vh;
    }
}

@media only screen and (max-height: 700px) {
    .home #heroPusher{
        margin-bottom: 20px;
    }
    .home .exokitFeature{
        min-height: 90vh;
    }
}
@media only screen and (max-width: 994px) {
    .home .whatIsExokitImg{
        width: auto;
        height: 300px;
    }
    .home .quotes{
        -webkit-clip-path: polygon(0 0, 100% 5%, 100% 100%, 0 100%);
        clip-path: polygon(0 0, 100% 5%, 100% 100%, 0 100%);
    }
    .home .featurePusher{
        padding-top: 50px;
    }
    .home .mlImg, .home .viveImg, .home .oculusImg{
        margin-bottom: 80px;
    }
    .home .oculusImg{
        margin-bottom: 80px;
    }
    .home .featureArrow {
        margin-top: 30px;
        margin-bottom: 30px;
    }
    .home .exokitFeatures{
        -webkit-clip-path: polygon(0 0, 100% 5%, 100% 98%, 0 100%);
        clip-path: polygon(0 0, 100% 5%, 100% 98%, 0 100%);
        min-height: 230vh;
    }
    .home .exokitFeature{
        min-height: 60vh;
    }
    .home .featuresSpacer{
        height: 80px;
    }
}

